--- a/[E-01]RockPaperScissors_Classifier.ipynb
+++ b/[E-01]RockPaperScissors_Classifier.ipynb
@@ -740,7 +740,10 @@
     "7. test_accuracy: 0.3166666626930237   \n",
     "    : 레이어를 수정하고, validation set을 사용하지 않았다.   \n",
     "    - Conv2D 32, 64, 128 /Dense 64, 32, 3 => Conv2D 32, 64, 128 /Dense 128, 32, 3   \n",
-    "    - 이전 레이어에서는 convolution layer에서 dense layer 로 넘어가면서 파라미터가 급격히 축소되는 것을 방지하고자 함. "
+    "    - 이전 레이어에서는 convolution layer에서 dense layer 로 넘어가면서 파라미터가 급격히 축소되는 것을 방지하고자 함.\n",
+    "    \n",
+    "## 05. visualize model training history\n",
+    "- matplotlib을 사용해 시각화한다."
    ]
   },
   {
