--- a/[E-01]RockPaperScissors_Classifier.ipynb
+++ b/[E-01]RockPaperScissors_Classifier.ipynb
@@ -816,9 +816,9 @@
     "    : 해결하고자 drop out을 추가했으나, 해결할 수 없었다.\n",
     "    \n",
     "    \n",
-    "4. **결론**    \n",
-    "    데이터가 좋지 않다. : 연속 사진으로 촬영되는 사이트 특성 상 비슷한 데이터가 많을 가능성이 크다.     \n",
-    "    input data가 레이어를 거치면서 어떻게 변화하는지 보는 것이 중요하다."
+    "**결론**    \n",
+    "- 데이터가 좋지 않다. : 연속 사진으로 촬영되는 사이트 특성 상 비슷한 데이터가 많을 가능성이 크다.     \n",
+    "- input data가 레이어를 거치면서 어떻게 변화하는지 보는 것이 중요하다."
    ]
   }
  ],
