update description about project

--- a/[E-02]sklearn_dataset_classification.ipynb
+++ b/[E-02]sklearn_dataset_classification.ipynb
@@ -1445,12 +1445,50 @@
     "    - 데이터 description을 출력해 해당 데이터의 특성을 파악한다.\n",
     "2. 학습과 평가를 위해 train, test 두 개의 dataset으로 나눈다.   \n",
     "    - 이 때, 시드를 고정시기고, label의 분포를 고정시켜 학습 시 분포를 일정하게 유지하였다.  \n",
-    "3. 의사결정트리, 랜덤포레스트, SVM, SGD 분류, 로지스틱 회귀 총 5개의 머신러닝 모델로 학습한다.   \n",
+    "3. 의사결정트리, 랜덤포레스트, SVM, SGD 분류, 로지스틱 회귀 **총 5개의 머신러닝 모델로 학습**한다.   \n",
     "4. confusion matrix를 확인할 수 있는 classification report를 통해 정밀도, 재현율, f1 스코어를 확인한다.\n",
     "5. 데이터 분포, 특성 등을 총합해 모델의 성능을 평가할 지표를 선택한다.\n",
     "\n",
     "# 루브릭 평가\n",
-    "---\n"
+    "---\n",
+    "1. **3가지 데이터셋의 구성이 합리적으로 진행되었는가?**   \n",
+    "    - 각 데이터셋을 분석, 모델에 적용, 평가한 내용을 코드의 주석과 위 *#정리* 에 정리하였다.  \n",
+    "2. **3가지 데이터셋에 대해 각각 5가지 모델을 성공적으로 적용하였는가?**  \n",
+    "    - 데이터의 분포를 고려하지 않았을 때는 wine 데이터셋의 학습에서 특정 label이 전혀 나오지 않아 학습이 되지 않았다.  \n",
+    "    - 이를 해결하기 위해 데이터 분포를 고정시키는 **stratify** 파라미터를 적용하여 해결했다.  \n",
+    "3. **3가지 데이터셋에 대해 모델의 평가지표가 적절히 선택되었는가?**  \n",
+    "    - Counter() 함수로 전체 데이터셋의 분포를 확인하였고, classification report의 support로 테스트 데이터셋의 분포를 재확인하였다.  \n",
+    "    - 정밀도, 재현율, f1 스코어에 대한 의미를 파악하고, 각 데이터셋의 특성에 따라 중요도를 판단하였다.  \n",
+    "    \n",
+    "# 회고\n",
+    "---\n",
+    "## 새롭게 알게된(혹은 다시 정립한) 개념\n",
+    "- **random_state**와 **stratify**의 차이  \n",
+    "\n",
+    "    (1) random_state  \n",
+    "    데이터셋을 train, test로 나눌 때 shuffle=False 파라미터를 설정하지 않으면 자동으로 무작위로 섞게 된다. 여기에서 무작위란 어떤 특정한 숫자로부터 시작한 난수처럼 보이는 수열을 말한다. 수열이 시작되는 특정한 숫자를 시드(seed)라고 하며, 이 시드를 수동으로 설정하고 다음에도 동일한 시드를 사용하면 동일하게 나눠진 데이터를 얻을 수 있다.\n",
+    "     따라서 데이터를 섞되 일정하게 섞고 싶을 때 사용하는 것이 seed이고, 이를 설정하는 파라미터가 random_state이다.  \n",
+    "     \n",
+    "    (2) stratify  \n",
+    "    label당 데이터의 분포를 일정하게 고정하는 파라미터이다. 예를 들어 label=[0, 1]이라면, 매 split을 진행할 때마다 70:30의 비율로 고정할 수 있다. ~~비율을 어떻게 정하는 지는 더 공부해봐야겠다.~~ \n",
+    "    해당 파라미터는 classification report에서 학습이 제대로 되지 않아 특정 label의 모든 지표와 데이터 개수가 0으로 나오는 바람에 찾아보게 되었다. \n",
+    "    \n",
+    "\n",
+    "- **confusion matrix**와 **평가지표**  \n",
+    "\n",
+    "    (1) 정밀도(precision)  \n",
+    "    정밀도는 예측한 모든 y_pred 중에 정확하게 예측한 값이 어느정도 있는가를 측정한 지표이다. 참과 거짓이 있다면 참이라고 예측한 값들 중 진짜 참은 얼마나 있는가?! 라고 말할 수 있다.  \n",
+    "    정밀도를 통해 **우리는 예측하고자 하는 label을 얼마나 정확하게 예측하는지**를 알 수 있다. \n",
+    "    \n",
+    "    (2) 재현율(recall)  \n",
+    "    재현율은 참과 거짓이 있다면 모든 참 중 참이라고 예측한 값이 얼마나 있는가를 측정한 지표이다. 이를 통해 **우리가 예측한 결과가 얼마나 정확한지**를 알 수 있다. \n",
+    "    \n",
+    "    (3) trouble shooting  \n",
+    "    true positive+false posivie==0 이면, 정밀도를 정의할 수 없기에 0으로 출력되고, true positive+false negative==0 이면, 재현율을 정의할 수 없어 0으로 출력된다.\n",
+    "\n",
+    "\n",
+    "## 느낀 점\n",
+    "confusion matrix를 이해하고 정밀도, 재현율에 대한 차이를 이해하는 것이 어려웠다. 아직 완벽하게 체화하지 못했지만 앞으로 다른 데이터에도 적용하면서 체화할 수 있을 것이라고 생각한다. 머신러닝 모델을 모듈을 사용해서 세 줄로 학습, 예측, 평가까지 끝낼 수 있다는게 놀라웠고 코드가 짧은 만큼 다양한 파라미터가 있는 것 같다. nn을 사용할 때 loss가 0으로 수렴하는 과정을 보다가 1초도 안되는 시간안에 학습을 끝낸다는 것이 놀라우면서 학습과정을 보지 못해 답답하기도 했다. 또한 데이터의 특성에 따라 성과지표가 다를 수 있다는 것은 매우 중요한 포인트라고 생각한다. 학습 모델을 구축하기 전에 평가지표에 대한 정립을 하는 과정이 필요하다는 것을 배울 수 있었다. "
    ]
   },
   {
