update description about project

--- a/[E-02]sklearn_dataset_classification.ipynb
+++ b/[E-02]sklearn_dataset_classification.ipynb
@@ -1453,9 +1453,13 @@
     "---\n",
     "1. **3가지 데이터셋의 구성이 합리적으로 진행되었는가?**   \n",
     "    - 각 데이터셋을 분석, 모델에 적용, 평가한 내용을 코드의 주석과 위 *#정리* 에 정리하였다.  \n",
+    "    \n",
+    "    \n",
     "2. **3가지 데이터셋에 대해 각각 5가지 모델을 성공적으로 적용하였는가?**  \n",
     "    - 데이터의 분포를 고려하지 않았을 때는 wine 데이터셋의 학습에서 특정 label이 전혀 나오지 않아 학습이 되지 않았다.  \n",
     "    - 이를 해결하기 위해 데이터 분포를 고정시키는 **stratify** 파라미터를 적용하여 해결했다.  \n",
+    "    \n",
+    "    \n",
     "3. **3가지 데이터셋에 대해 모델의 평가지표가 적절히 선택되었는가?**  \n",
     "    - Counter() 함수로 전체 데이터셋의 분포를 확인하였고, classification report의 support로 테스트 데이터셋의 분포를 재확인하였다.  \n",
     "    - 정밀도, 재현율, f1 스코어에 대한 의미를 파악하고, 각 데이터셋의 특성에 따라 중요도를 판단하였다.  \n",
@@ -1484,7 +1488,7 @@
     "    재현율은 참과 거짓이 있다면 모든 참 중 참이라고 예측한 값이 얼마나 있는가를 측정한 지표이다. 이를 통해 **우리가 예측한 결과가 얼마나 정확한지**를 알 수 있다. \n",
     "    \n",
     "    (3) trouble shooting  \n",
-    "    true positive+false posivie==0 이면, 정밀도를 정의할 수 없기에 0으로 출력되고, true positive+false negative==0 이면, 재현율을 정의할 수 없어 0으로 출력된다.\n",
+    "    true positive+false positive==0 이면, 정밀도를 정의할 수 없기에 0으로 출력되고, true positive+false negative==0 이면, 재현율을 정의할 수 없어 0으로 출력된다.\n",
     "\n",
     "\n",
     "## 느낀 점\n",
