exploration 3. camera sticker application

--- a/[E-03]camera_sticker_application.ipynb
+++ b/[E-03]camera_sticker_application.ipynb
@@ -58,7 +58,7 @@
     "import os\n",
     "my_image_path = os.getenv('HOME')+'/aiffel/camera_sticker/images/me.jpg'\n",
     "img_bgr = cv2.imread(my_image_path)    #- OpenCV로 이미지를 읽어서\n",
-    "img_bgr = cv2.resize(img_bgr, (640, 480))    # 640x360의 크기로 Resize\n",
+    "img_bgr = cv2.resize(img_bgr, (640, 480))    # 480 크기로 Resize\n",
     "img_show = img_bgr.copy()      #- 출력용 이미지 별도 보관\n",
     "plt.imshow(img_bgr)\n",
     "plt.show()"
@@ -318,9 +318,9 @@
    ],
    "source": [
     "for dlib_rect, landmark in zip(dlib_rects, list_landmarks):\n",
-    "    print (landmark[2]) # nose center index : 30\n",
+    "    print (landmark[2]) # left cheek index : 2\n",
     "    x = landmark[2][0]\n",
-    "    y = landmark[2][1] #+ dlib_rect.width()//2\n",
+    "    y = landmark[2][1] \n",
     "    w = dlib_rect.width()\n",
     "    h = dlib_rect.width()\n",
     "    print ('(x,y) : (%d,%d)'%(x,y))\n",
@@ -586,7 +586,7 @@
    "source": [
     "my_image_path = os.getenv('HOME')+'/aiffel/camera_sticker/images/bright.jpg'\n",
     "img_bgr = cv2.imread(my_image_path)    #- OpenCV로 이미지를 읽어서\n",
-    "img_bgr = cv2.resize(img_bgr, (640, 520))    # 640x480의 크기로 Resize\n",
+    "img_bgr = cv2.resize(img_bgr, (640, 520))    # 640x520의 크기로 Resize\n",
     "img_show = img_bgr.copy()      #- 출력용 이미지 별도 보관\n",
     "plt.imshow(img_bgr)\n",
     "plt.show()"
@@ -1376,7 +1376,7 @@
    "source": [
     "my_image_path = os.getenv('HOME')+'/aiffel/camera_sticker/images/distance.jpg'\n",
     "img_bgr = cv2.imread(my_image_path)    #- OpenCV로 이미지를 읽어서\n",
-    "img_bgr = cv2.resize(img_bgr, (640, 580))    # 640x480의 크기로 Resize\n",
+    "img_bgr = cv2.resize(img_bgr, (640, 580))    # 640x580의 크기로 Resize\n",
     "img_show = img_bgr.copy()      #- 출력용 이미지 별도 보관\n",
     "plt.imshow(img_bgr)\n",
     "plt.show()"
@@ -1722,7 +1722,7 @@
    "source": [
     "my_image_path = os.getenv('HOME')+'/aiffel/camera_sticker/images/viewpoint.jpg'\n",
     "img_bgr = cv2.imread(my_image_path)        #- OpenCV로 이미지를 읽어서\n",
-    "img_bgr = cv2.resize(img_bgr, (960, 680))  # 640x360의 크기로 Resize\n",
+    "img_bgr = cv2.resize(img_bgr, (960, 680))  # 960x680의 크기로 Resize\n",
     "img_show = img_bgr.copy()      #- 출력용 이미지 별도 보관\n",
     "plt.imshow(img_bgr)\n",
     "plt.show()"
@@ -1776,7 +1776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 아무리 키워도 얼굴이 너무 안나와서 검출이 안된다.    \n",
+    "- 아무리 키워도 얼굴이 안나와서 검출이 안된다.    \n",
     "\n",
     "(4) 전신 사진"
    ]
@@ -1802,7 +1802,7 @@
    "source": [
     "my_image_path = os.getenv('HOME')+'/aiffel/camera_sticker/images/full.jpg'\n",
     "img_bgr = cv2.imread(my_image_path)        #- OpenCV로 이미지를 읽어서\n",
-    "img_bgr = cv2.resize(img_bgr, (640, 680))  # 640x360의 크기로 Resize\n",
+    "img_bgr = cv2.resize(img_bgr, (640, 680))  # 640x680의 크기로 Resize\n",
     "img_show = img_bgr.copy()      #- 출력용 이미지 별도 보관\n",
     "plt.imshow(img_bgr)\n",
     "plt.show()"
@@ -1811,7 +1811,9 @@
   {
    "cell_type": "code",
    "execution_count": 526,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1900,13 +1902,6 @@
     "## 느낀 점  \n",
     "좌표를 계산 후 적용하는 부분의 이해가 처음엔 어려웠지만, 이미지 축을 이해하니 개념을 확립할 수 있었다. 또한 스티커의 픽셀과 원본 이미지 픽셀을 동시에 같이 출력하는 부분도 인상깊었다. 하지만 적용할 수 있는 이미지의 기준이 있어서, 그 한계점을 해결하지 못한 점이 아쉬웠다. 실제 카메라 어플리케이션은 화면을 비추면서 기능이 구현되기 때문에 영상에도 적용해보고 싶다."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
