--- a/[E-05]spectrogram_classification.ipynb
+++ b/[E-05]spectrogram_classification.ipynb
@@ -754,16 +754,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<numpy.lib.npyio.NpzFile object at 0x7fad5dca8ed0>\n",
-      "KeysView(<numpy.lib.npyio.NpzFile object at 0x7fad5dca8ed0>)\n",
-      "ValuesView(<numpy.lib.npyio.NpzFile object at 0x7fad5dca8ed0>)\n"
+      "<numpy.lib.npyio.NpzFile object at 0x7f5a6e9ee750>\n",
+      "KeysView(<numpy.lib.npyio.NpzFile object at 0x7f5a6e9ee750>)\n",
+      "ValuesView(<numpy.lib.npyio.NpzFile object at 0x7f5a6e9ee750>)\n",
+      "<class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -776,8 +777,135 @@
     "\n",
     "print(speech_data)\n",
     "print(speech_data.keys())\n",
-    "print(speech_data.values())"
+    "print(speech_data.values())\n",
+    "print(type(speech_data['wav_vals'][0]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LABEL :  ['yes', 'no', 'up', 'down', 'left', 'right', 'on', 'off', 'stop', 'go', 'unknown', 'silence']\n",
+      "Indexed LABEL :  {'yes': 0, 'no': 1, 'up': 2, 'down': 3, 'left': 4, 'right': 5, 'on': 6, 'off': 7, 'stop': 8, 'go': 9, 'unknown': 10, 'silence': 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_list = ['yes', 'no', 'up', 'down', 'left', 'right', 'on', 'off', 'stop', 'go']\n",
+    "\n",
+    "label_value = target_list\n",
+    "label_value.append('unknown')\n",
+    "label_value.append('silence')\n",
+    "\n",
+    "print('LABEL : ', label_value)\n",
+    "\n",
+    "new_label_value = dict()\n",
+    "for i, l in enumerate(label_value):\n",
+    "    new_label_value[l] = i\n",
+    "label_value = new_label_value\n",
+    "\n",
+    "print('Indexed LABEL : ', label_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  3,  3, ..., 11, 11, 11])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = []\n",
+    "for v in speech_data[\"label_vals\"]:\n",
+    "    temp.append(label_value[v[0]])\n",
+    "label_data = np.array(temp)\n",
+    "\n",
+    "label_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. data setting\n",
+    "- wav2spec 함수를 매핑해서 데이터셋을 변환한다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import librosa\n",
+    "\n",
+    "def wav2spec(wav, fft_size=258): # spectrogram shape을 맞추기위해서 size 변형\n",
+    "    D = np.abs(librosa.stft(wav, n_fft=fft_size))\n",
+    "    return D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'speech_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5060cb8bc527>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mspeech_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'speech_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del speech_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'map'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-43fc3103a20e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mspec_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mspeech_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"wav_vals\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwav2spec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'map'"
+     ]
+    }
+   ],
+   "source": [
+    "spec_data = speech_data[\"wav_vals\"].map(wav2spec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -798,17 +926,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train data :  (45558, 8000, 1)\n",
-      "train labels :  (45558,)\n",
-      "test data :  (5062, 8000, 1)\n",
-      "test labels :  (5062,)\n"
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'map'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-59bc38cac8d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m                                                                 shuffle=True)\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_wav\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mtrain_wav\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_wav\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwav2spec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mtrain_wav\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_wav\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# CNN모델에 넣기 위해 차원을 늘려준다.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'map'"
      ]
     }
    ],
@@ -820,7 +956,8 @@
     "                                                                label_data, \n",
     "                                                                test_size=0.1,\n",
     "                                                                shuffle=True)\n",
-    "#print(train_wav)\n",
+    "print(type(train_wav))\n",
+    "train_wav = train_wav.map(wav2spec)\n",
     "\n",
     "train_wav = train_wav.reshape([-1, sr, 1]) # CNN모델에 넣기 위해 차원을 늘려준다. \n",
     "test_wav = test_wav.reshape([-1, sr, 1])\n",
@@ -862,27 +999,6 @@
     "checkpoint_dir = os.getenv('HOME')+'/aiffel/speech_recognition/models/spec'\n",
     "\n",
     "checkpoint_dir"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. data setting\n",
-    "- wav2spec 함수를 매핑해서 데이터셋을 변환한다. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import librosa\n",
-    "\n",
-    "def wav2spec(wav, fft_size=258): # spectrogram shape을 맞추기위해서 size 변형\n",
-    "    D = np.abs(librosa.stft(wav, n_fft=fft_size))\n",
-    "    return D"
    ]
   },
   {
