exploration 5. spectrogram classification

--- a/[E-05]spectrogram_classification.ipynb
+++ b/[E-05]spectrogram_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "tamil-flavor",
+   "id": "daily-acrylic",
    "metadata": {},
    "source": [
     "# [Exploration 05] Spectrogram Classification\n",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "increasing-arabic",
+   "id": "royal-semester",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "collect-franklin",
+   "id": "french-elizabeth",
    "metadata": {},
    "source": [
     "- speech_data는 wav_vals, label_vals로 이루어져있다."
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "coral-discrimination",
+   "id": "painful-bidding",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "happy-harvard",
+   "id": "vertical-graham",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-pavilion",
+   "id": "excess-conversation",
    "metadata": {},
    "source": [
     "- data는 총 50,620개\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sixth-affiliation",
+   "id": "educated-alfred",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classical-commodity",
+   "id": "allied-pattern",
    "metadata": {},
    "source": [
     "## 2. data 전처리\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "incredible-inside",
+   "id": "frank-killing",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ruled-brunswick",
+   "id": "higher-hearts",
    "metadata": {},
    "source": [
     "- 'unkown', 'silence'를 추가한다.\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "liable-married",
+   "id": "alternative-shopper",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impressed-liver",
+   "id": "metropolitan-infrared",
    "metadata": {},
    "source": [
     "- 위에서 만들어 둔 index를 이용해 label data를 숫자(index)로 바꾼다. "
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "quarterly-pregnancy",
+   "id": "unsigned-tiffany",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-breakfast",
+   "id": "reported-textbook",
    "metadata": {},
    "source": [
     "- data split : sklearn.model_selection을 이용한다. "
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "induced-joint",
+   "id": "hungarian-syndrome",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "local-smooth",
+   "id": "southeast-bosnia",
    "metadata": {},
    "source": [
     "## 3. data setting\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "trained-quarter",
+   "id": "southwest-patient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-ecuador",
+   "id": "peripheral-surge",
    "metadata": {},
    "source": [
     "### hyper parameter 조정 "
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "applicable-episode",
+   "id": "civilian-missile",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "passive-right",
+   "id": "through-avenue",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-cleanup",
+   "id": "shared-springfield",
    "metadata": {},
    "source": [
     "## 4. wave classification 모델 구현 \n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "accepting-mouse",
+   "id": "sporting-underground",
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "indie-samoa",
+   "id": "racial-illustration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specific-tunnel",
+   "id": "unavailable-august",
    "metadata": {},
    "source": [
     "- 가장 성능이 좋은 모델을 checkpoint directory에 저장한다."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "labeled-athletics",
+   "id": "assumed-mustang",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "honey-double",
+   "id": "single-window",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "headed-transport",
+   "id": "specific-smile",
    "metadata": {},
    "source": [
     "## 5. visualize model training history"
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "together-example",
+   "id": "understanding-challenge",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closing-stream",
+   "id": "local-nightlife",
    "metadata": {},
    "source": [
     "## 6. evaluate with best model weights"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "final-poetry",
+   "id": "destroyed-garden",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "arranged-anniversary",
+   "id": "sublime-inventory",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bored-bermuda",
+   "id": "specific-bubble",
    "metadata": {},
    "source": [
     "## 7. test model\n",
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "finnish-kitchen",
+   "id": "dynamic-camel",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fabulous-digit",
+   "id": "qualified-indie",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "third-arlington",
+   "id": "actual-serve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-blood",
+   "id": "polar-anatomy",
    "metadata": {},
    "source": [
     "# spectrogram classification\n",
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "modern-orange",
+   "id": "dependent-matter",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "suspected-classic",
+   "id": "remarkable-meaning",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "oriental-province",
+   "id": "concrete-qualification",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "variable-spotlight",
+   "id": "tamil-ethnic",
    "metadata": {},
    "source": [
     "## 2. data setting\n",
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "broadband-advisory",
+   "id": "satellite-shadow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "worse-dominican",
+   "id": "challenging-miniature",
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "covered-calculation",
+   "id": "solar-warren",
    "metadata": {},
    "outputs": [
     {
@@ -948,8 +948,6 @@
     }
    ],
    "source": [
-    "# wav2spec = np.vectorize(wav2spec)\n",
-    "\n",
     "spec_data=[]\n",
     "for wav in speech_data[\"wav_vals\"]:\n",
     "    temp = wav2spec(wav)\n",
@@ -961,9 +959,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "molecular-acoustic",
+   "metadata": {},
+   "source": [
+    "- map함수를 통해 spectrogram으로 변환하는 코드"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "figured-reach",
+   "id": "extraordinary-blind",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "wanted-yeast",
+   "id": "overall-humanitarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "registered-chambers",
+   "id": "missing-notice",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "separated-advantage",
+   "id": "higher-lewis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dated-interval",
+   "id": "increased-regard",
    "metadata": {},
    "source": [
     "- spectrogram 확인 "
@@ -1035,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "stretch-taylor",
+   "id": "alternative-preserve",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "formed-tours",
+   "id": "hollow-peripheral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "romance-invitation",
+   "id": "covered-obligation",
    "metadata": {},
    "source": [
     "### hyper parameter 조정 "
@@ -1086,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "informed-liberty",
+   "id": "pleased-cooperative",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "tamil-supplier",
+   "id": "major-respondent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "naughty-geneva",
+   "id": "binary-interference",
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cognitive-herald",
+   "id": "earned-plant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cross-opportunity",
+   "id": "plain-fisher",
    "metadata": {},
    "source": [
     "## 3. spec classification 모델 구현 \n",
@@ -1180,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "talented-change",
+   "id": "stone-polls",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "diagnostic-charleston",
+   "id": "further-forestry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "parental-darkness",
+   "id": "smoking-investor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "loving-third",
+   "id": "flying-subdivision",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceramic-parking",
+   "id": "superior-tribune",
    "metadata": {},
    "source": [
     "## 4. visualize model training history"
@@ -1357,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "classified-economics",
+   "id": "printable-spectrum",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subject-cycle",
+   "id": "worldwide-center",
    "metadata": {},
    "source": [
     "## 5. evaluate with best model weights"
@@ -1408,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "sound-preference",
+   "id": "adaptive-infection",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bibliographic-parish",
+   "id": "promising-conditioning",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beneficial-gazette",
+   "id": "least-clearance",
    "metadata": {},
    "source": [
     "### 성능 비교 (wav vs spec)\n",
@@ -1466,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "welsh-notice",
+   "id": "interested-medicine",
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blond-angle",
+   "id": "nuclear-jonathan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "overhead-spring",
+   "id": "seeing-dance",
    "metadata": {},
    "source": [
     "## 8. skip connection 을 추가한 모델의 성능 확인 "
@@ -1518,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "sapphire-istanbul",
+   "id": "cloudy-august",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "amino-folks",
+   "id": "artistic-decrease",
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "spectacular-healthcare",
+   "id": "complimentary-eating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "floating-white",
+   "id": "smoking-doctor",
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1715,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "favorite-habitat",
+   "id": "temporal-cache",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1758,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "allied-chair",
+   "id": "fifty-future",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "greek-rochester",
+   "id": "floppy-ultimate",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assumed-inflation",
+   "id": "bound-analysis",
    "metadata": {},
    "source": [
     "## 성능 비교\n",
@@ -1807,7 +1813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "curious-oasis",
+   "id": "numeric-valentine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "induced-siemens",
+   "id": "possible-enclosure",
    "metadata": {},
    "source": [
     "# 정리\n",
